--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,7 @@
   body {
     background: linear-gradient(90deg, #fff 21px, transparent 1%) center, linear-gradient(#fff 21px, transparent 1%) center, #a799cc;
     background-size: 22px 22px;
+    min-width: 310px !important;
   }
   
   a {
@@ -73,7 +74,7 @@
   }
   
   .header {
-    line-height: 60px; /*80px*/
+    line-height: 80px; /*80px*/
     width: 100%;
     transition: line-height 0.1s linear, box-shadow 0.2s linear;
     position: fixed;
@@ -742,6 +743,7 @@
     .col, .col.four, .col.three, .col.two {
       display: block;
       width: 95%;
+      min-width: 310px !important;
       padding: 0;
       margin: 0 auto;
       float: none;
