--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,1 +1,245 @@
-<h1 style="margin-top: 50px !important;">Services</h1>
+
+<div class="section">
+    <div class="slider">
+      <div class="container slidercontent">
+        <h1 class="hero">Our Services</h1>
+        <h2 class="hero">We offer some of the most spectacular services at reasonable - get started now!</h2>
+        <!--div class="call"><span>View All</span></div-->
+        <div class="sub-btn">
+        <button class="button-two" onclick="location.href='http://localhost:3000/orderForm'" type="button"><span>Get Started</span></button>
+      </div>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="container">
+      <h1>Some of the writing services we offer</h1>
+      
+      <!--svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 256" id="question_mark"><circle fill="#FFF" cx="128" cy="128" r="115.2"/><path d="M128 256c70.692 0 128-57.308 128-128C256 57.308 198.692 0 128 0C57.308 0 0 57.308 0 128c0 70.692 57.308 128 128 128zm0-25.6c-56.554 0-102.4-45.846-102.4-102.4C25.6 71.446 71.446 25.6 128 25.6c56.554 0 102.4 45.846 102.4 102.4c0 56.554-45.846 102.4-102.4 102.4z" fill="#3C790A"/><path d="M97.28 97.28c0-30.72 61.44-38.4 58.88-5.12c0 23.04-40.96 33.28-40.96 58.88v17.92h25.6v-10.24c0-23.04 43.52-30.72 43.52-69.12c-5.12-56.32-115.2-56.32-115.2 7.68h28.16zm17.92 81.92h25.6v25.6h-25.6v-25.6z" fill="#3C790A"/></svg-->
+      
+      <p class="intro">Our academic writers are well versed in a variety of topics ranging from social sciences to computer science. They come from a rich academic backgrounds, some being graduates and post graduate students.</p>
+    </div>
+  </div>
+  <div class="section">
+    <div class="container">
+      <div class="col four">
+        <h1 class="icon"><svg>
+          <use xlink:href="#comments"></use>
+        </svg></h1>
+        <h1 class="service">Essay Paper Writing</h1>
+        <p>Harness the true power of delegation and make simple, strategic steps that will help you ace your exams</p>
+      </div>
+      <div class="col four">
+        <h1 class="icon"><svg>
+          <use xlink:href="#charts"></use>
+        </svg></h1>
+        <h1 class="service">Research Paper Writing</h1>
+        <p>Learn how to engage the right professionals by using our services.</p>
+      </div>
+      <div class="responsivegroup"></div>
+      <div class="col four">
+        <h1 class="icon"><svg>
+          <use xlink:href="#options"></use>
+        </svg></h1>
+        <h1 class="service">Dissertation Paper Writing</h1>
+        <p>Stop chasing down deadlines to submit assignments, you're not really doing yourself a favor. We should be doing this work for you!</p>
+      </div>
+      <div class="col four">
+        <h1 class="icon"><svg>
+          <use xlink:href="#collection"></use>
+        </svg></h1>
+        <h1 class="service">Thesis Paper Writing</h1>
+        <p>Communicate a clear message to your peers and set yourself up for long-term, sustainable success.</p>
+      </div>
+      <div class="group"></div>
+    </div>
+  </div>
+  <div class="section bg">
+    <div class="container">
+      <h1>Online Academic Help With Different Subjects</h1>
+      <h2>There is no "one size fits all" when it comes to academic writing. Our writers posses outstanding knowledge in specific discipline.</h2>
+      <br />
+      <br />
+      <br />
+      <div class="col three bg nopad pointer">
+        <div class="imgholder"><img src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-2_zpse1ce0jta_sktijn.jpg"></div>
+        <h1 class="feature">Literature</h1>
+        <p>You can get your literature paper custom written by our literature specialists.</p>
+      </div>
+      <div class="col three bg nopad pointer">
+        <div class="imgholder"><img src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-4_zpsazehwtua_ewyer0.jpg"></div>
+        <h1 class="feature">Nursing</h1>
+        <p>This subject can be vast. Our online professional academic writers are always ready to help you out at a small fee.</p>
+      </div>
+      <div class="col three bg nopad pointer">
+        <div class="imgholder"><img src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-3_zpsxo9mx2fx_lqohzy.jpg"></div>
+        <h1 class="feature">Finance</h1>
+        <p>Finance is not you cup of tea? Fear not, our professional finance writers are always on call.</p>
+      </div>
+      <div class="group margin"></div>
+      <div class="col three bg nopad pointer">
+        <div class="imgholder"><img src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-4_zpsazehwtua_ewyer0.jpg"></div>
+        <h1 class="feature">Computer Science</h1>
+        <p>The scope of this subject can ne vast. Worry not, writers with degree in CS are always itching to help you out.</p>
+      </div>
+      <div class="col three bg nopad pointer">
+        <div class="imgholder"><img src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-2_zpse1ce0jta_sktijn.jpg"></div>
+        <h1 class="feature">Sociology</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas necessitatibus laboriosam est, suscipit recusandae.</p>
+      </div>
+      <div class="col three bg nopad pointer">
+        <div class="imgholder"><img src="http://res.cloudinary.com/do5ht5y0y/image/upload/v1501322753/post-img-3_zpsxo9mx2fx_lqohzy.jpg"></div>
+        <h1 class="feature">Statistics</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas necessitatibus laboriosam est, suscipit recusand.</p>
+      </div-->
+      <div class="group"></div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="container">
+      <h1>How it Works!</h1>
+      <h2>Below are steps to follow to enjoy our services.</h2>
+      <div class="col three">
+        <h1 class="icon side">[]</h1>
+        <h1 class="feature side">Step 1</h1>
+        <p class="side">Place an order: fill all the paper instructions in the order form. Include all the helpful materials.</p>
+      </div>
+      <div class="col three">
+        <h1 class="icon side">[]</h1>
+        <h1 class="feature side">Step 2</h1>
+        <p class="side">Pay for the order: proceed to pay for immediate reassignment to the next available professional.</p>
+      </div>
+      <div class="col three">
+        <h1 class="icon side">[]</h1>
+        <h1 class="feature side">Step 3</h1>
+        <p class="side">Track the progress: seek for drafts and enquire the progress of the assignment.</p>
+      </div>
+      <div class="group margin"></div>
+      <div class="col three">
+        <h1 class="icon side">[]</h1>
+        <h1 class="feature side">Step 4</h1>
+        <p class="side">Download the paper: the paper is uploaded to your email and personal account. Plagiarism report will be attached as well.</p>
+      </div>
+      <div class="col three">
+        <h1 class="icon side">[]</h1>
+        <h1 class="feature side">Step 5</h1>
+        <p class="side">Wow wow wow wow wow wow wow wow</p>
+      </div>
+      <div class="col three">
+        <h1 class="icon side">[]</h1>
+        <h1 class="feature side">Step 6</h1>
+        <p class="side">Wow wow wow wow wow wow wow wow</p>
+      </div>
+      <div class="group margin"></div>
+    </div>
+  </div>
+  <div class="section bg">
+    <div class="container">
+      <h1>Related</h1>
+      <h2>Blog Posts</h2>
+      <div class="col two bg margin extrapad">
+        <h1 class="icon side">[]</h1>
+        <span class="feature side">Chemistry</span><span class="side"> - Wow wow wow</span>
+        <p class="side">How were x-ray diffraction patterns deciphered before computers?</p>
+      </div>
+      <div class="col two bg margin extrapad">
+        <h1 class="icon side">[]</h1>
+        <span class="feature side">Chemistry</span><span class="side"> - Wow wow</span>
+        <p class="side">Why is it considered acid rain with pH <5.6?</p>
+      </div>
+      <div class="group margin"></div>
+      <div class="col two bg margin extrapad">
+        <h1 class="icon side">[]</h1>
+        <span class="feature side">Chemistry</span><span class="side"> - Wow</span>
+        <p class="side">Why does a tetrahedral molecule like methane have a dipole moment of zero?</p>
+      </div>
+      <div class="col two bg margin extrapad">
+        <h1 class="icon side">[]</h1>
+        <span class="feature side">Chemistry</span><span class="side"> - Wow wow</span>
+        <p class="side">Why is hypochlorite a stronger oxidizing agent than other oxychlorides?</p>
+      </div>
+      <div class="group"></div>
+    </div>
+  </div>
+  <!--div class="section">
+    <div class="container">
+      <div class="col two">
+        <h1 class="icon">[]</h1>
+        <h1 class="service">Wow</h1>
+        <p>Wow wow wow wow wow wow wow wow wow wow wow wow wow</p>
+      </div>
+      <div class="col two">
+        <h1 class="icon">[]</h1>
+        <h1 class="service">Wow</h1>
+        <p>Wow wow wow wow wow wow wow wow wow</p>
+      </div>
+      <div class="group"></div>
+    </div>
+  </div-->
+  
+      <div class="section">
+        <div class="container">
+          
+          <h1 class="form_head"><span>VLearners</span> Order Form</h1>
+          <!-- Box -->
+          <div class="col two">
+              <!-- info container -->
+              <section class="info">
+                  <h3>Your preferred Assignment Masters</h3>
+                  <p>
+                      <i class="fas fa-road"></i>
+                       <small>Connect with us today!</small>
+                  </p>
+                  <p>
+                      <i class="fas fa-phone-alt"></i>
+                      <small>(+254) 712-679-390</small>
+                  </p>
+                  <p>
+                      <i class="fas fa-envelope"></i>
+                      <small>Visuallearners@gmail.com</small>
+                  </p>
+              </section>
+          </div>
+              <!-- form container -->
+            <div class="col two">
+              <h3 class="email_head">Email Us</h3>
+              <form onSubmit="return validateEmail(this);" action="">
+                  <!-- Name -->
+                  <div class="name">
+                      <label for="name">Name</label>
+                      <br>
+                      <input type="text" id="name" required>
+                  </div>
+                  <!-- Company -->
+                  <div class="company">
+                      <label for="company">The Assignment</label>
+                      <br>
+                      <input type="text" id="company" required>
+                  </div>
+                  <!-- Email -->
+                  <div class="email">
+                      <label for="email">Email</label>
+                      <br>
+                      <input type="email" id="email" pattern="[a-zA-Z0-9!#$%&amp;'*+\/=?^_`{|}~.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*" required>
+                  </div>
+                  <!-- Telephone -->
+                  <div class="tele">
+                      <label for="telephone">Phone Number</label>
+                      <br>
+                      <input type="tel" id="telephone" required>
+                  </div>
+                  <!-- Message -->
+                  <div class="message">
+                      <label for="message">Supporting References/Materials</label>
+                      <br>
+                      <textarea id="message" ></textarea>
+                  </div>
+                  <!-- Submit -->
+                  <div class="submit">
+                      <input type="submit" onclick="location.href='http://localhost:3000/gratMssg'" type="button" value="SUBMIT">
+                  </div>
+              </form>
+          </div>
+        </div>
+      </div>
+  
